[package]
name = "aliusnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
simplelog = "0.12.2"
proc-bitfield = "0.3.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
