[package]
name = "aliusnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["apu"]
apu = []
log = ["simplelog"]
trace = ["log"]

[dependencies]
log = "0.4.29"
simplelog = { version = "0.12.2", optional = true}
proc-bitfield = "0.5.3"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xz2 = "0.1.7"

[build-dependencies]
heck = "0.5.0"
