[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliusnes = {path = "../aliusnes"}
eframe = {version = "0.27.2", default-features = false, features = ["wgpu", "x11", "wayland", "default_fonts"]}
rtrb = "0.3.0"
